Add scheduler repository